# KV-Store

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
AesEncryption/: AesEncryption.cpp  AesEncryption.h  Encryption.h
FileManager/: FileManager.cpp  FileManager.h
SSTIndex/: SSTIndex.cpp  SSTIndex.h
api/: api.cpp  api.h  api.tpp
kv/: KeyValue.cpp  KeyValue.h  KeyValue.proto  KeyValue.tpp
memtable/: Memtable.cpp  Memtable.h
tests/: api_unittest.cpp  binarytree_tests.cpp  encryption_unittest.cpp  file_manager_unittest.cpp  kvpair_unittest.cpp  memtable_unittest.cpp  redblacktree_unittest.cpp  sstIndex_unittest.cpp
tree/: BinaryTree.cpp  BinaryTree.h  BinaryTree.tpp  RedBlackTree.cpp  RedBlackTree.h  TreeNode.cpp  TreeNode.h  TreeNode.tpp
